--- a/interface/mailbot/app/src/main/res/layout/activity_locker_collection1.xml
+++ b/interface/mailbot/app/src/main/res/layout/activity_locker_collection1.xml
@@ -16,8 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        >
+        app:layout_constraintVertical_bias="0.5">
 
 
         <ImageView
