--- a/interface/mailbot/app/src/main/res/layout/activity_details_collection1.xml
+++ b/interface/mailbot/app/src/main/res/layout/activity_details_collection1.xml
@@ -50,11 +50,10 @@
 
             <TextView
                 android:id="@+id/speechBubbleText"
-                android:layout_width="380dp"
-                android:layout_height="75dp"
-                android:layout_alignParentTop="true"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="60dp"
                 android:text="@string/infoDetailsActivity"
                 android:textAlignment="center"
                 android:textColor="@color/postRed"
@@ -81,19 +80,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/fieldName"
-                    android:textSize="30sp" />
+                    android:textColor="#ffffff"
+                    android:textSize="20sp" />
 
                 <EditText
                     android:id="@+id/topEntry"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="65dp"/>
+                    android:textColor="#ffffff"
+                    android:layout_marginStart="100dp"/>
 
                 <TextView
                     android:id="@+id/confirmTopEntry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="65dp"
+                    android:textColor="#ffffff"
                     android:visibility="gone"/>
             </LinearLayout>
 
@@ -101,28 +103,30 @@
                 android:id="@+id/midFieldPanel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/topFieldPanel"
-                android:layout_marginTop="10dp">
+                android:layout_below="@id/topFieldPanel">
 
                 <TextView
                     android:id="@+id/midField"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/fieldEmail"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/midEntry"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"/>
+                    android:layout_marginStart="24dp"
+                    android:textColor="#ffffff"/>
 
                 <TextView
                     android:id="@+id/confirmMidEntry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:textColor="#ffffff"/>
             </LinearLayout>
 
             <LinearLayout
@@ -130,6 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/midFieldPanel"
+                android:textColor="#ffffff"
                 android:layout_marginTop="10dp">
 
                 <TextView
@@ -137,19 +142,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/userChoosePhoto"
+                    android:textColor="#ffffff"
                     android:textSize="20sp" />
 
                 <CheckBox
                     android:id="@+id/choosePhoto"
                     android:layout_width="wrap_content"
+                    android:textColor="#ffffff"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"/>
+                    android:layout_marginStart="116dp"/>
 
                 <EditText
                     android:id="@+id/deliveryLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:textColor="#ffffff"
                     android:visibility="gone"/>
 
                 <TextView
@@ -157,6 +165,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:textColor="#ffffff"
                     android:visibility="gone"/>
             </LinearLayout>
         </RelativeLayout>
@@ -168,7 +177,7 @@
             android:layout_alignEnd="@+id/speechBubble"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
-            android:text="GO" />
+            android:text="NEXT" />
 
         <Button
             android:id="@+id/buttonCancel"
