--- a/interface/mailbot/app/src/main/res/layout/activity_end_collection1.xml
+++ b/interface/mailbot/app/src/main/res/layout/activity_end_collection1.xml
@@ -40,18 +40,20 @@
 
             <ImageView
                 android:id="@+id/speechbubbleEnd"
-                android:layout_width="480dp"
-                android:layout_height="360dp"
+                android:layout_width="500dp"
+                android:layout_height="550dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="90dp"
                 android:src="@mipmap/speechbubble" />
 
             <TextView
 
-                android:layout_width="427dp"
-                android:layout_height="188dp"
+                android:layout_width="420dp"
+                android:layout_height="220dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="69dp"
+                android:layout_marginTop="80dp"
                 android:text="@string/endActivitySpeech"
                 android:textAlignment="center"
                 android:textColor="@color/postRed"
@@ -80,7 +82,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/relativeLayoutEnd"
-            android:layout_marginBottom="41dp"
+            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="80dp"
             android:text="@string/toSameRecipient" />
 
         <Button
@@ -88,6 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/relativeLayoutEnd"
+            android:layout_marginRight="100dp"
             android:layout_alignTop="@+id/btnToSameRecipient"
             android:text="@string/startAgain" />
 
