creating delivery mode

--- a/interface/mailbot/app/src/main/res/layout/collection1_activity_details.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection1_activity_details.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/speechBubble"
             android:layout_alignLeft="@id/speechBubble"
-            android:visibility="gone"/>
+            android:layout_marginLeft="30dp"
+            android:visibility=""/>
 
         <ImageView
             android:id="@+id/botFace"
